parsecanteen parse all the xls
get all the data from xls in a single time and export them in a python dictionary

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   db:
     environment:
       - MYSQL_ROOT_PASSWORD=unitn
-      - MYSQL_DATABASE=canteen
+      - MYSQL_DATABASE=canteendb
       - MYSQL_USER=studente
       - MYSQL_PASSWORD=unitn
     image: mariadb
