--- a/updater/Dockerfile
+++ b/updater/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3-onbuild
 MAINTAINER emavgl
 
-RUN apt-get update && apt-get install -y cron libmysqlclient-dev mysql-client python3-mysqldb
+RUN apt-get update && apt-get install -y cron libmysqlclient-dev mysql-client
 COPY crontab /etc/cron.d/updater
 RUN chmod 0744 /etc/cron.d/updater && touch /var/log/cron.log
 
