--- a/flaskapp/Dockerfile
+++ b/flaskapp/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3
 MAINTAINER emavgl
 
-RUN apt-get update && apt-get install -y cron libmysqlclient-dev mysql-client
+RUN apt-get update && apt-get install -y libmysqlclient-dev mysql-client
 
 # Create app folder
 RUN mkdir -p /usr/src/app
@@ -15,7 +15,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the rest of the app
 COPY . /usr/src/app
 
-COPY crontab /etc/cron.d/updater
-RUN chmod 0744 /etc/cron.d/updater && touch /var/log/cron.log
-
-CMD cron && tail -f /var/log/cron.log
+# Defaults for running
+ENV FLASK_APP=runserver.py
+EXPOSE 5000
+CMD ["flask", "run", "--host=0.0.0.0"]
