--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,4 +16,4 @@ services:
       - MYSQL_PASSWORD=unitn
     image: mariadb
     volumes:
-      - .db/data/:/var/lib/mysql
+      - ./db/data/:/var/lib/mysql
